# be434-Spring2024

./: .replit  all_test.sh  pyproject.toml
assignments/00_getting_started/: test3.txt
docs/getting_started/: temp.txt
