[tool.poetry]
name = "be434-spring2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "be434_spring2024"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "24.4.0"
mypy = "1.9.0"
flake8 = "7.0.0"
pylint = "3.1.0"
pytest = "8.1.1"
yapf = "0.40.2"
biopython = "1.83"
jupyter = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
